--- a/about.css
+++ b/about.css
@@ -11,7 +11,7 @@ main{
     background-color: #FAC81D;
     width: 97%;
     border: solid;
-    border-width: 8%;
+    border-width: 3px;
     border-color: black;
     margin: 1%; 
 }
@@ -26,8 +26,8 @@ h1{
     height: auto;
     border-top: solid;
     border-bottom: solid;
-    border-color: gray;
-    border-width: 5%;
+    border-color: black;
+    border-width: 3px;
     margin-bottom: 5%;
 }
 
@@ -45,7 +45,7 @@ article{
     color: white;
     width: 97%;
     border: solid;
-    border-width: 8%;
+    border-width: 3px;
     border-color: black;
     margin: 1%;
 }
@@ -76,11 +76,21 @@ h3{
     height: 60%;
     width: 50%;
     border: solid;
-    border-width: 5%;
+    border-width: 3px;
     border-color: white;
     border-radius: 10%;
     margin: 0;
 }
+
+footer {
+    display: grid;
+    grid-auto-flow: column;
+    gap: 1em;
+    justify-content: center;
+    background-color: darkcyan; 
+    padding: 2% 3% 3%;
+    width: 100%;
+    }
 
 @media screen and (min-width: 1020px) {
 
@@ -131,7 +141,7 @@ h3{
     .Successimg{
         height: 20%;
         width: 70%;
-        border-width: 3%;
+        border-width: 3px;
         border-radius: 3%;
     }
 
