--- a/style.css
+++ b/style.css
@@ -10,18 +10,21 @@ html{
     }
 
 nav{
+    display: flex;
+    align-content: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
     background: darkcyan;
-    height: 10vh;
-    width: 100vw;
+    height: 9%;
+    width: 100%;
     position: fixed;
     }
 
 label.logo{
     color: whitesmoke;
-    font-family: sans-serif;
-    font-size: 30px;
-    line-height: 70px;
-    /* padding: 0 100px; */
+    font-family: monospace, courier, new;
+    font-size: 3.0rem;
+    line-height: 6.0rem;
     font-weight: bold;
     }
 
@@ -29,35 +32,35 @@ nav ul{
     display: grid;
     grid-auto-flow: column;
     float: right;
-    /* gap: .5em; */
-    /* justify-content: center; */
-    /* position: absolute; */
-    
-    /* margin-right: 5px; */
+    gap: .6em;
+    justify-content: center;
+    margin-right: 1.0rem;
     
     }
     
 nav ul li{
     font-family: sans-serif;
     display: inline-block;
-    line-height: 70px;
-    /* position: relative; */
-    /* margin: 0 5px; */
+    line-height: 6.0rem;
     }
 
 nav ul li a{
     color: whitesmoke;
-    font-size: 15px;
+    font-size: 1.0rem;
     text-transform: uppercase;
-    padding: 7px 13px;
-    border-radius: 3px;
+    padding: .1rem .1rem;
+    border-radius: .3rem;
+    float: right;
+    height: 1.0rem;
     }
 
 nav ul li:hover{
     background-color: lightgreen;
+    border-radius: .4rem;
+    line-height: 8.0rem;
 }
 .hero{
-    background-image: linear-gradient(rgba(0, 0, 0, 0.721), rgba(0, 0, 0, 0.233)), url(https://images.pexels.com/photos/9510438/pexels-photo-9510438.jpeg?auto=compress&cs=tinysrgb&w=600);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.776), rgba(0, 0, 0, 0.233)), url(https://images.pexels.com/photos/9510438/pexels-photo-9510438.jpeg?auto=compress&cs=tinysrgb&w=600);
     background-size: cover;
     height: 100vh;
     width: 100vw;
@@ -73,16 +76,17 @@ nav ul li:hover{
     }
       
 .hero-text p{
-    margin: 1rem;
-    padding: 2rem;
+    margin: .1rem;
+    padding: .4rem;
     font-size: 1.5rem;
-    font-weight: 400;
+    font-weight: 250;
     font-family: sans-serif;
+    /* font-family: monospace, courier, new; */
     }
       
 button{
     background: darkcyan;
-    border: 2px solid;
+    border: .2rem solid;
     color: whitesmoke;
     font-size: 1.5rem;
     padding: 1rem 2.5rem;
@@ -98,14 +102,14 @@ button:hover{
 .footer {
     display: grid;
     grid-auto-flow: column;
-    gap: 1em;
+    gap: 3em;
     justify-content: center;
     background-color: darkcyan;
     position: fixed;  
     bottom: 0;
-    padding: 20px 20px;
+    padding: 2.0rem 2.0rem;
     width: 100%;
-    height: 0px;
+    height: 0rem;
     }
 
 
