--- a/home.css
+++ b/home.css
@@ -3,6 +3,7 @@
     text-decoration: none;
     list-style: none;
     box-sizing: border-box;
+    font-family: 'Courier New', Courier, monospace;
 }
 
 html{
@@ -36,18 +37,16 @@ nav ul{
     gap: .6em;
     justify-content: center;
     margin-right: 2rem;
-    
     }
     
 nav ul li{
-    font-family: sans-serif;
     display: inline-block;
     line-height: 6.0rem;
     }
 
 nav ul li a{
     color: whitesmoke;
-    font-size: .7rem;
+    font-size: 0.7rem;
     font-weight: 500;
     text-transform: uppercase;
     padding: .1rem .1rem;
@@ -80,11 +79,9 @@ nav ul li:hover{
 .hero-text p{
     margin: .1rem;
     padding: .4rem;
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     font-weight: 250;
-    font-family: sans-serif;
-    /* font-family: monospace, courier, new; */
-    }
+}
       
 button{
     background: darkcyan;
@@ -95,11 +92,11 @@ button{
     border-radius: .8rem;
     font-weight: bold;
     transition: 0.5s all ease;
-    }
+}
     
 button:hover{
     background-color: lightgreen;
-    }
+}
 
 .footer {
     display: grid;
@@ -112,13 +109,10 @@ button:hover{
     padding: 2.0rem 2.0rem;
     width: 100%;
     height: 0rem;
-    }
+}
 
-    .hide{
-        display: none;
-    }
+.hide{
+    display: none;
+}
 
-    /* .size{
-        color: lightgreen;
-    } */
 
